--- a/style.css
+++ b/style.css
@@ -33,5 +33,38 @@ padding-left: 30px;
 .network img{
     width:70%;
     
+
+}  
+.text{
+    text-align: center;
 }
+footer p{
+    text-align: center;
+}
+.my{
     
+    width: 30%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 15px ;
+    border-radius:30px ;
+    box-shadow:10px 10px 30px gray;
+}
+
+.my img{
+    width: 90%;
+    padding-top: 10px;
+}
+.my h2{
+    text-align: justify;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.my p{
+    text-align: justify;
+    padding-right: 15px;
+    padding-left: 15px;
+
+}
+ 
